Deploy Portfolio on gh-pages

--- a/index.html
+++ b/index.html
@@ -1,12 +1,360 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@400;500;700&family=Poppins&family=Roboto:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index.css" />
     <title>Document</title>
-</head>
-<body>
-    test test
-</body>
+  </head>
+  <body>
+    <header class="TopBar">
+      <div class="Logo-Plceholder">
+        <a href="index.html" class="Logo">Dubrovin</a>
+      </div>
+      <nav class="Topbar-Desk-Nav">
+        <ul>
+          <li>
+            <a href="#Works">Porftfolio</a>
+          </li>
+          <li>
+            <a href="#About">About</a>
+          </li>
+          <li>
+            <a href="#Form">Contact</a>
+          </li>
+          <li>
+            <a href="#Form">
+              <img src="src/img/Icon-Mail.png" alt="#">
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <nav class="Burger-Menu">
+        <button type="button">
+          <img src="src/img/Union.png" alt="Menu" />
+        </button>
+      </nav>
+    </header>
+    <section class="MainContent">
+      <header class="headline">
+        <div class="headline-content">
+          <h1>Hey There. I’m Illia</h1>
+          <h2>I’am a Sofware Developer</h2>
+          <p>
+            I can help you build a product , feature or website Look through
+            some of my work and experience! If you like what you see and have a
+            project you need coded, 
+          </p>
+          <p>don’t hestiate to contact me.</p>
+        </div>
+        <ul class="Social-media" id="top">
+          <li id="-top">
+            <a
+              href="https://github.com/aliveGUY"
+              class="GitHub-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img src="src/img/GitHub.png" alt="GitHub" />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/feed/"
+              class="LinkedIn-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img src="src/img/Linkdn.png" alt="linkedin" />
+            </a>
+          </li>
+          <li>
+            <a href="https://angel.co/u/illia-dubrovin" 
+               class="Hand-link"
+               target="_blank"
+               rel="noopener noreferrer">
+              <img src="src/img/Hand.png" alt="Hand" />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://twitter.com/Sciborskyy"
+              class="Twitter-link"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <img src="src/img/twitter.png" alt="twitter" />
+            </a>
+          </li>
+          <li>
+            <a href="https://medium.com/@ilyadubrivvin" 
+               class="M-link"
+               target="_blank"
+               rel="noopener noreferrer">
+              <img src="src/img/M.png" alt="M" />
+            </a>
+          </li>
+        </ul>
+      </header>
+      <a id="Works"></a>
+      <section class="Works">
+        <div class="Works-header">
+          <h2 class="Works-title">My Recent Works</h2>
+          <hr class="hr-2">
+        </div>
+        <div class="Works-Recent-Project">
+          <img src="src/img/Yoga_girl.png" alt="" />
+          <h2>Multi-Post Stories</h2>
+            <p>
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required. has been the industry's standard dummy text ever
+              since the 1500s, when an unknown printer took a standard dummy text.
+            </p>
+            <div class="Works-Recent-Nav">
+              <ul class="Works-Card-Categories">
+                <li>css</li>
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+              <nav>
+                <button class="button-reg" type="button">See Project</button>
+              </nav>
+            </div>
+        </div>
+        <div class="Works-Cards">
+          <article class="Works-Card" >
+            <div class="Works-Card-Content">
+              <h2>Profesional Art Printing Data</h2>
+              <p>
+                A daily selection of privately personalized reads; no accounts or
+                sign-ups required. has been the industry's standard
+              </p>
+              <ul class="Works-Card-Categories">
+                <li>css</li>
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </div>
+            <nav class="Works-Card-SeeProject">
+              <button class="button-reg" type="button">See Project</button>
+            </nav>
+          </article>
+          <article class="Works-Card" >
+            <div class="Works-Card-Content">
+              <h2>Profesional Art Printing Data</h2>
+              <p>
+                A daily selection of privately personalized reads; no accounts or
+                sign-ups required. has been the industry's standard
+              </p>
+              <ul class="Works-Card-Categories">
+                <li>css</li>
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </div>
+            <nav class="Works-Card-SeeProject">
+              <button class="button-reg" type="button">See Project</button>
+            </nav>
+          </article>
+          <article class="Works-Card" >
+            <div class="Works-Card-Content">
+              <h2>Profesional Art Printing Data</h2>
+              <p>
+                A daily selection of privately personalized reads; no accounts or
+                sign-ups required. has been the industry's standard
+              </p>
+              <ul class="Works-Card-Categories">
+                <li>css</li>
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </div>
+            <nav class="Works-Card-SeeProject">
+              <button class="button-reg" type="button">See Project</button>
+            </nav>
+          </article>
+          <article class="Works-Card" >
+            <div class="Works-Card-Content">
+              <h2>Profesional Art Printing Data</h2>
+              <p>
+                A daily selection of privately personalized reads; no accounts or
+                sign-ups required. has been the industry's standard
+              </p>
+              <ul class="Works-Card-Categories">
+                <li>css</li>
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </div>
+            <nav class="Works-Card-SeeProject">
+              <button class="button-reg" type="button">See Project</button>
+            </nav>
+          </article>
+          <article class="Works-Card" >
+            <div class="Works-Card-Content">
+              <h2>Profesional Art Printing Data</h2>
+              <p>
+                A daily selection of privately personalized reads; no accounts or
+                sign-ups required. has been the industry's standard
+              </p>
+              <ul class="Works-Card-Categories">
+                <li>css</li>
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </div>
+            <nav class="Works-Card-SeeProject">
+              <button class="button-reg" type="button">See Project</button>
+            </nav>
+          </article>
+          <article class="Works-Card" >
+            <div class="Works-Card-Content">
+              <h2>Profesional Art Printing Data</h2>
+              <p>
+                A daily selection of privately personalized reads; no accounts or
+                sign-ups required. has been the industry's standard
+              </p>
+              <ul class="Works-Card-Categories">
+                <li>css</li>
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>Ruby</li>
+              </ul>
+            </div>
+            <nav class="Works-Card-SeeProject">
+              <button class="button-reg" type="button">See Project</button>
+            </nav>
+          </article>
+        </div>
+      </section>
+      <section class="About">
+        <a id="About"></a>
+        <h2 class="About-title">About me</h2>
+        <div class="About-headline">
+          <p>
+            Hello I’m a software developer! I can help you build a product ,
+            feature or website Look through some of my work and experience! If
+            you like what you see and have a project you need coded, don’t
+            hestiate to contact me.
+          </p>
+          <nav>
+            <button class="button-reg" type="button">Get My Resume</button>
+          </nav>
+        </div>
+        <div class="Categories">
+          <ul class="Categories-all">
+            <li class="Categories-romb">
+              Language
+              <ul class="Categories-iner">
+                <li class="Categories-iner-item">Javascript</li>
+                <li class="Categories-iner-item">Ruby</li>
+                <li class="Categories-iner-item">Html</li>
+                <li class="Categories-iner-item">Css</li>
+              </ul>
+            </li>
+            <li class="Categories-square">
+              Framework
+              <ul class="Categories-iner">
+                <li class="Categories-iner-item">Bootstrap</li>
+                <li class="Categories-iner-item">Ruby on Rails</li>
+                <li class="Categories-iner-item">RSPec</li>
+                <li class="Categories-iner-item">CopyBara</li>
+                <li class="Categories-iner-item">Selenium</li>
+              </ul>
+            </li>
+            <li class="Categories-sircle">
+              Skills
+              <ul class="Categories-iner">
+                <li class="Categories-iner-item">CodeKit</li>
+                <li class="Categories-iner-item">Github</li>
+                <li class="Categories-iner-item">Codepen</li>
+                <li class="Categories-iner-item">Gitlab</li>
+                <li class="Categories-iner-item">Terminal</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <a id="Form"></a>
+      <section class="Form">
+        <div class="Form-text">
+          <h2> 
+            I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
+          </h2>
+        </div>
+        <form action="https://formspree.io/f/mqknlvyq" method="post" class="Form-form">
+          <ul class="Form-list">
+            <li>
+              <input class="Form-input" type="text" placeholder="Full name" name="user_name" required maxlength="30"/>
+              <input class="Form-input" type="text" placeholder="Last name" name="user_last_name" required maxlength="30"/>
+            </li>
+            <li>
+              <input class="Form-input" type="email" placeholder="Email address" name="user_email" required/>
+            </li>
+            <li>
+              <textarea name="user_message" placeholder="Enter text here" required maxlength="500"></textarea>
+            </li>
+            <li class="Form-button">
+              <button type="submit" class="button-reg">Get in touch</button>
+            </li>
+          </ul>
+        </form>
+      </section>
+    </section>
+    <footer class="Footer">
+      <ul class="Social-media" id="dark">
+        <li>
+          <a
+            href="https://github.com/aliveGUY"
+            class="GitHub-link"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="src/img/GitHub-dark.png" alt="GitHub" />
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/feed/"
+            class="LinkedIn-link"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="src/img/Linkdn-dark.png" alt="linkedin" />
+          </a>
+        </li>
+        <li>
+          <a href="#" class="Hand-link">
+            <img src="src/img/Hand-dark.png" alt="Hand" />
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://twitter.com/home"
+            class="Twitter-link"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="src/img/twitter-dark.png" alt="twitter" />
+          </a>
+        </li>
+        <li>
+          <a href="#" class="M-link">
+            <img src="src/img/M-dark.png" alt="M" />
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
