Fix linter errors

--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
         <ul class="Social-media" id="top">
           <li id="-top">
             <a
-              href="https://g.body-Open{
-                overflow-y: hidden !important;
-              }thub.com/aliveGUY"
+              href="https://github.com/aliveGUY"
               class="GitHub-link"
               target="_blank"
               rel="noopener noreferrer"
