--- a/index.html
+++ b/index.html
@@ -356,6 +356,6 @@
         </li>
       </ul>
     </footer>
-    <script type="module" src="https://aliveguy.github.io/index.js"></script>
+    <script type="module" src="/src/scripts/MobileMenu.js"></script>
   </body>
 </html>
