--- a/index.html
+++ b/index.html
@@ -357,5 +357,6 @@
       </ul>
     </footer>
     <script type="module" src="/src/scripts/MobileMenu.js"></script>
+    <script type="module" src="/src/scripts/popup.js"></script>
   </body>
 </html>
