--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="index.css" />
     <title>Document</title>
   </head>
+  
+  
+  
+  
+
+
   <body class="body">
     <header class="TopBar">
       <div class="Logo-Plceholder">
@@ -37,9 +43,14 @@
           </li>
         </ul>
       </nav>
-      
     </header>
+
+    <div class="Popup-wrapper">
+      <div class="Popup">
+      </div>
+    </div>
     
+
     <section class="MainContent">
       <header class="headline">
         <div class="headline-content">
@@ -108,7 +119,7 @@
           <hr class="hr-2">
         </div>
         <div class="Works-Recent-Project">
-          <img src="src/img/Yoga_girl.png" alt="" />
+          <img src="src/img/Works-Yoga_girl.png" alt="" />
           <h2>Multi-Post Stories</h2>
             <p>
               A daily selection of privately personalized reads; no accounts or
@@ -128,114 +139,6 @@
             </div>
         </div>
         <div class="Works-Cards">
-          <article class="Works-Card" >
-            <div class="Works-Card-Content">
-              <h2>Profesional Art Printing Data</h2>
-              <p>
-                A daily selection of privately personalized reads; no accounts or
-                sign-ups required. has been the industry's standard
-              </p>
-              <ul class="Works-Card-Categories">
-                <li>css</li>
-                <li>html</li>
-                <li>bootstrap</li>
-                <li>Ruby</li>
-              </ul>
-            </div>
-            <nav class="Works-Card-SeeProject">
-              <button class="button-reg" type="button">See Project</button>
-            </nav>
-          </article>
-          <article class="Works-Card" >
-            <div class="Works-Card-Content">
-              <h2>Profesional Art Printing Data</h2>
-              <p>
-                A daily selection of privately personalized reads; no accounts or
-                sign-ups required. has been the industry's standard
-              </p>
-              <ul class="Works-Card-Categories">
-                <li>css</li>
-                <li>html</li>
-                <li>bootstrap</li>
-                <li>Ruby</li>
-              </ul>
-            </div>
-            <nav class="Works-Card-SeeProject">
-              <button class="button-reg" type="button">See Project</button>
-            </nav>
-          </article>
-          <article class="Works-Card" >
-            <div class="Works-Card-Content">
-              <h2>Profesional Art Printing Data</h2>
-              <p>
-                A daily selection of privately personalized reads; no accounts or
-                sign-ups required. has been the industry's standard
-              </p>
-              <ul class="Works-Card-Categories">
-                <li>css</li>
-                <li>html</li>
-                <li>bootstrap</li>
-                <li>Ruby</li>
-              </ul>
-            </div>
-            <nav class="Works-Card-SeeProject">
-              <button class="button-reg" type="button">See Project</button>
-            </nav>
-          </article>
-          <article class="Works-Card" >
-            <div class="Works-Card-Content">
-              <h2>Profesional Art Printing Data</h2>
-              <p>
-                A daily selection of privately personalized reads; no accounts or
-                sign-ups required. has been the industry's standard
-              </p>
-              <ul class="Works-Card-Categories">
-                <li>css</li>
-                <li>html</li>
-                <li>bootstrap</li>
-                <li>Ruby</li>
-              </ul>
-            </div>
-            <nav class="Works-Card-SeeProject">
-              <button class="button-reg" type="button">See Project</button>
-            </nav>
-          </article>
-          <article class="Works-Card" >
-            <div class="Works-Card-Content">
-              <h2>Profesional Art Printing Data</h2>
-              <p>
-                A daily selection of privately personalized reads; no accounts or
-                sign-ups required. has been the industry's standard
-              </p>
-              <ul class="Works-Card-Categories">
-                <li>css</li>
-                <li>html</li>
-                <li>bootstrap</li>
-                <li>Ruby</li>
-              </ul>
-            </div>
-            <nav class="Works-Card-SeeProject">
-              <button class="button-reg" type="button">See Project</button>
-            </nav>
-          </article>
-          <article class="Works-Card" >
-            <div class="Works-Card-Content">
-              <h2>Profesional Art Printing Data</h2>
-              <p>
-                A daily selection of privately personalized reads; no accounts or
-                sign-ups required. has been the industry's standard
-              </p>
-              <ul class="Works-Card-Categories">
-                <li>css</li>
-                <li>html</li>
-                <li>bootstrap</li>
-                <li>Ruby</li>
-              </ul>
-            </div>
-            <nav class="Works-Card-SeeProject">
-              <button class="button-reg" type="button">See Project</button>
-            </nav>
-          </article>
         </div>
       </section>
       <a id="Myself"></a>
@@ -357,6 +260,7 @@
       </ul>
     </footer>
     <script type="module" src="/src/scripts/MobileMenu.js"></script>
-    <script type="module" src="/src/scripts/popup.js"></script>
+    <script type="module" src="/src/scripts/Popup.js"></script>
+    <script type="module" src="/src/scripts/WorkCards.js"></script>
   </body>
 </html>
