Fix Recent Work Card

--- a/index.html
+++ b/index.html
@@ -119,22 +119,14 @@
           <hr class="hr-2">
         </div>
         <div class="Works-Recent-Project">
-          <img src="src/img/Works-Yoga_girl.png" alt="" />
-          <h2>Multi-Post Stories</h2>
-            <p>
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required. has been the industry's standard dummy text ever
-              since the 1500s, when an unknown printer took a standard dummy text.
-            </p>
+          <img class="Works-Recent-Img" src="#" alt="Img" />
+          <h2 class="Works-Recent-h2"></h2>
+            <p class="Works-Recent-p">
+              </p>
             <div class="Works-Recent-Nav">
-              <ul class="Works-Card-Categories">
-                <li>css</li>
-                <li>html</li>
-                <li>bootstrap</li>
-                <li>Ruby</li>
-              </ul>
+              <ul class="Works-Card-Categories"></ul>
               <nav>
-                <button class="button-reg" type="button">See Project</button>
+                <button class="button-reg Works-Card-Button" type="button">See Project</button>
               </nav>
             </div>
         </div>
