--- a/index.html
+++ b/index.html
@@ -191,20 +191,20 @@
           <ul class="Form-list">
             <li class="Form-names">
               <div>
-                <input class="Form-input" id="Name" type="text" placeholder="Name" maxlength="30"/>
+                <input class="Form-input" id="Name" name="Name" type="text" placeholder="Name" maxlength="30"/>
                 <small></small>
               </div>
               <div>
-                <input class="Form-input" id="Last_Name" type="text" placeholder="Last name" maxlength="30"/>
+                <input class="Form-input" id="Last_Name" name="Last_Name" type="text" placeholder="Last name" maxlength="30"/>
                 <small></small>
               </div>
             </li>
             <li>
-              <input class="Form-input" id="email" placeholder="Email address"/>
+              <input class="Form-input" id="email" name="Email" placeholder="Email address"/>
                 <small></small>
             </li>
             <li>
-              <textarea id="message" name="user_message" placeholder="Leave your message here"  maxlength="500"></textarea>
+              <textarea id="message" name="Message" placeholder="Leave your message here"  maxlength="500"></textarea>
               <small></small>
             </li>
             <li class="Form-button">
