Fix regex for email

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <small></small>
             </li>
             <li>
-              <textarea id="message" name="Message" placeholder="Leave your message here"  maxlength="500"></textarea>
+              <textarea id="message" name="user_message" placeholder="Leave your message here"  maxlength="500"></textarea>
               <small></small>
             </li>
             <li class="Form-button">
