--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
           </h2>
         </div>
-        <form action="https://formspree.io/f/mqknlvyq" method="post" id="Form-form" class="Form-form" name="contact">
+         <form action="https://formspree.io/f/mqknlvyq" method="post" id="Form-form" class="Form-form" name="contact"> 
           <ul class="Form-list">
             <li class="Form-names">
               <div>
@@ -199,7 +199,7 @@
                 <small></small>
               </div>
             </li>
-            <li>
+            <li class="Form-email">
               <input class="Form-input" id="email" name="Email" placeholder="Email address"/>
                 <small></small>
             </li>
