--- a/index.html
+++ b/index.html
@@ -190,25 +190,26 @@
          <form action="https://formspree.io/f/mqknlvyq" method="post" id="Form-form" class="Form-form" name="contact"> 
           <ul class="Form-list">
             <li class="Form-names">
-              <div>
-                <input class="Form-input" id="Name" name="Name" type="text" placeholder="Name" maxlength="30"/>
+              <div class="Form-Name-Wrapper">
+                <input id="Name" class="Form-input"  name="Name" type="text" placeholder="name" maxlength="30" oninput="InsertData()"/>
                 <small></small>
               </div>
-              <div>
-                <input class="Form-input" id="Last_Name" name="Last_Name" type="text" placeholder="Last name" maxlength="30"/>
+              <div class="Form-Name-Wrapper">
+                <input id="Last_Name" class="Form-input"  name="Last_Name" type="text" placeholder="last name" maxlength="30" oninput="InsertData()"/>
                 <small></small>
               </div>
             </li>
             <li class="Form-email">
-              <input class="Form-input" id="email" name="Email" placeholder="Email address"/>
-                <small></small>
+              <input id="email" class="Form-input" type="email" placeholder="Email address" oninput="InsertData()"/>
+              <small></small>
             </li>
             <li>
-              <textarea id="message" name="user_message" placeholder="Leave your message here"  maxlength="500"></textarea>
+              <textarea id="message" name="user_message" placeholder="message"  maxlength="500" oninput="InsertData()"></textarea>
               <small></small>
             </li>
             <li class="Form-button">
               <button type="submit" class="button-reg">Get in touch</button>
+              <small></small>
             </li>
           </ul>
         </form>
@@ -258,6 +259,7 @@
         </li>
       </ul>
     </footer>
+    <script type="text/Javascript" src="/src/scripts/LocalStorage.js"></script>
     <script type="module" src="/src/scripts/MobileMenu.js"></script>
     <script type="module" src="/src/scripts/form-validation.js"></script>
     <script type="module" src="/src/scripts/WorkCards.js"></script>
