--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <input id="Name" class="Form-input"  name="Name" type="text" placeholder="name" maxlength="30" oninput="InsertData()"/>
                 <small></small>
               </div>
-              <div class="Form-Name-Wrapper">
+              <div class="Form-Name-Wrapper" id="Hide">
                 <input id="Last_Name" class="Form-input"  name="Last_Name" type="text" placeholder="last name" maxlength="30" oninput="InsertData()"/>
                 <small></small>
               </div>
@@ -259,7 +259,7 @@
         </li>
       </ul>
     </footer>
-    <script type="text/Javascript" src="/src/scripts/LocalStorage.js"></script>
+    <script src="/src/scripts/LocalStorage.js"></script>
     <script type="module" src="/src/scripts/MobileMenu.js"></script>
     <script type="module" src="/src/scripts/form-validation.js"></script>
     <script type="module" src="/src/scripts/WorkCards.js"></script>
