--- a/index.html
+++ b/index.html
@@ -191,20 +191,20 @@
           <ul class="Form-list">
             <li class="Form-names">
               <div class="Form-Name-Wrapper">
-                <input id="Name" class="Form-input"  name="Name" type="text" placeholder="name" maxlength="30" oninput="InsertData()"/>
+                <input id="name" class="Form-input"  name="Name" type="text" placeholder="name" maxlength="30"/>
                 <small></small>
               </div>
               <div class="Form-Name-Wrapper" id="Hide">
-                <input id="Last_Name" class="Form-input"  name="Last_Name" type="text" placeholder="last name" maxlength="30" oninput="InsertData()"/>
+                <input id="lastName" class="Form-input"  name="Last_Name" type="text" placeholder="last name" maxlength="30"/>
                 <small></small>
               </div>
             </li>
             <li class="Form-email">
-              <input id="email" class="Form-input" type="email" placeholder="Email address" oninput="InsertData()"/>
+              <input id="email" class="Form-input" type="email" placeholder="Email address"/>
               <small></small>
             </li>
             <li>
-              <textarea id="message" name="user_message" placeholder="message"  maxlength="500" oninput="InsertData()"></textarea>
+              <textarea id="message" name="user_message" placeholder="message"  maxlength="500"></textarea>
               <small></small>
             </li>
             <li class="Form-button">
